--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
     "draft-js": "^0.11.7",
     "firebase": "^9.22.1",
     "font-awesome": "^4.7.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
