--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-draft-wysiwyg": "^1.13.4"
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "tailwindcss": "^3.4.3"
   }
 }
